tests/paczka1/fuzzy1/85733109.err
Error in line 11: IAMLk51ZynM S727 81,5
Error in line 16: S697 S727 0,8
Error in line 21: S697 S461 72,3
Error in line 7: Gpmb3FD4 S461 20,7
